# tama-lang

./: .todo.txt.swp  CMakeLists.txt  README.md  build_driver.sh  build_run.sh  build_run_asm.sh  build_run_driver.sh  run.sh  run_driver.sh  todo.txt
assembly_test/: a.out  fun.asm  math.asm  run_asm.sh  stack_test.asm  test.asm
src/: .assembler.cpp.swp  .assembler.hpp.swp  .assembler1.hpp.swp  .elf.hpp.swp  .error.cpp.swp  .lexer.h.swp  .linker.cpp.swp  .main.c.swp  .main.cpp.swp  .optimizer.cpp.swp  .semant.cpp.swp  .semant.hpp.swp  .tac.cpp.swp  .tmdAst.hpp.swp  .token.hpp.swp  .x86_frame.cpp.swp  .x86_generator.cpp.swp  CMakeLists.txt  ControlFlowGraph.cpp  ControlFlowGraph.hpp  a.out  assembler.c  assembler.cpp  assembler.h  assembler.hpp  assembler1.cpp  assembler1.hpp  ast.c  ast.cpp  ast.h  ast.hpp  byte_array.c  byte_array.cpp  byte_array.hpp  code.asm  code32.asm  compiler.c  compiler.cpp  compiler.h  compiler.hpp  (+48 more)
test/: .irtest.py.swp  .main.asm.swp  .main.tmd.swp  .scratch.tmd.swp  .test.asm.swp  .test.py.swp  a.out  complex.asm  complex.tmd  irtest.py  main  main.asm  main.s  main.tac  main.tmd  math.asm  math.tac  math.tmd  scratch.asm  scratch.tmd  test.asm  test.py  test.tmd  test_nasm.sh
