set(Sources
    main.cpp
    memory.cpp
    token.cpp
    assembler.cpp
    error.cpp
    lexer.cpp
    parser.cpp
    semant.cpp
    linker.cpp
    tac.cpp
    )

set(Headers
    ast.hpp
    memory.hpp
    token.hpp
    assembler.hpp
    error.hpp
    lexer.hpp
    parser.hpp
    semant.hpp
    reserved_word.hpp
    environment.hpp
    tmdAst.hpp
    linker.hpp
    elf.hpp
    tac.hpp
    type.hpp
    x86_frame.hpp
    )

add_executable(
    tama
    ${Headers}
    ${Sources}
    )
