set(Sources
    main.cpp
    memory.cpp
    assembler.cpp
    error.cpp
    lexer.cpp
    parser.cpp
    semant.cpp
    linker.cpp
    tac.cpp
    optimizer.cpp
    x86_generator.cpp
    x86_frame.cpp
    utility.cpp
    ControlFlowGraph.cpp
    )

set(Headers
    ast.hpp
    memory.hpp
    token.hpp
    assembler.hpp
    error.hpp
    lexer.hpp
    parser.hpp
    semant.hpp
    reserved_word.hpp
    tmdAst.hpp
    linker.hpp
    elf.hpp
    tac.hpp
    type.hpp
    x86_frame.hpp
    optimizer.hpp
    x86_generator.hpp
    utility.hpp
    symbol.hpp
    ControlFlowGraph.hpp
    )

add_executable(
    tama
    ${Headers}
    ${Sources}
    )
